--- a/o_meni.html
+++ b/o_meni.html
@@ -8,12 +8,12 @@
 <body>
 <a href="index.html">vrati me doma!</a>
 <p>Moji najveći interesi vezani su uz umjetnost, a glazba je jedan od najvećih dijelova moga života. U nastavku se nalaze fotografije koje će me opisati bolje od samih rijeći. </p>
-<img src="slike/WhatsApp Slika 2023-06-13 u 21.55..jpg"/>
-<img src="slike/WhatsApp Slika 2023-06-13 u 21.5.jpg"/>
-<img src="slike/WhatsApp Slika .jpg"/>
-<img src="slike/WhatsApp Slika 2023-06-13 u 21.55.3.jpg"/>
-<img src="slike/WhatsApp Slika 2023-06-13 u 21.55.37.jpg"/>
-<img src="slike/WhatsApp Slika 2023-06-13 u 215.39.jpg">
+<img src="Slike/WhatsApp Slika 2023-06-13 u 21.55..jpg"/>
+<img src="Slike/WhatsApp Slika 2023-06-13 u 21.5.jpg"/>
+<img src="Slike/WhatsApp Slika .jpg"/>
+<img src="Slike/WhatsApp Slika 2023-06-13 u 21.55.3.jpg"/>
+<img src="Slike/WhatsApp Slika 2023-06-13 u 21.55.37.jpg"/>
+<img src="Slike/WhatsApp Slika 2023-06-13 u 215.39.jpg">
 <h2>VIDEO S YOUTUBE-A</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/wRHBt7mahgo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
