--- a/vjezbe.html
+++ b/vjezbe.html
@@ -10,16 +10,16 @@
 <h1>VJEŽBE</h1>
 <h2>VEKTORSKA GRAFIKA</h2>
 <h3>FONT</h3>
-<img src="slike/IvaJuzbasic.jpg"/>
+<img src="Slike/IvaJuzbasic.jpg"/>
 <h3>KRIVULJE</h3>
-<img src="slike/IvaJuzbasic2_page-0001.jpg"/>
+<img src="Slike/IvaJuzbasic2_page-0001.jpg"/>
 <p>Crtanje Bezierovih krivulja u vektorskim programima u zadanom koordinatnom sustavu; Definiranje sivog tona za ispunu i obrub objekata; debljina linije;
 Slojevi (Layers);
 Automatsko crtanje objekata između zadanih objekta;
 Pretvaranje teksta u objekte i izrezivanje maski </p>
 <h3>ILUSTRATOR</h3>
-<img src="slike/IvaJuzbasic3 (1)_page-0001.jpg"/>
-<img src="slike/IvaJuzbasic3 (1)_page-0002.jpg"/>
+<img src="Slike/IvaJuzbasic3 (1)_page-0001.jpg"/>
+<img src="Slike/IvaJuzbasic3 (1)_page-0002.jpg"/>
 <p>Uvođenje slika u dokument
 - definiranje swatch boja u RGB, CMYK, HSB sustavima boja
 - transparencija (Opacity)
@@ -27,20 +27,20 @@ Pretvaranje teksta u objekte i izrezivanje maski </p>
 - rad sa slojevima (Layers); grupiranje objekata
 - apliciranje swatch boja na objekte</p>
 <h3>GRADIJENTI I TRANSPARENCIJA</h3>
-<img src="slike/IvaJuzbasic4_page-0001.jpg"/>
-<img src="slike/IvaJuzbasic4.2_page-0001.jpg"/>
+<img src="Slike/IvaJuzbasic4_page-0001.jpg"/>
+<img src="Slike/IvaJuzbasic4.2_page-0001.jpg"/>
 <p>Složeni objekti koji se sastoje od više zatvorenih staza (krivulja)
 - dodavanje, oduzimanje staza postojećim objektima
 - linearni i radijalni gradijent
 - "mesh" gradijent</p>
 <h3>PROJEKTNI ZADATAK</h3>
-<img src="slike/Iva_Juzbasic_projektni_zadatak1 (2)_page-0001.jpg"/>
+<img src="Slike/Iva_Juzbasic_projektni_zadatak1 (2)_page-0001.jpg"/>
 <p>Kreirati sliku u Adobe Photoshopu ili GIMPu kao kompoziciju više fotografija koristeći tehnike
 retuširanja, fotomontaže i koloriranja.</p>
 <h2>PIKSEL GRAFIKA</h2>
 <h3>RETUŠIRANJE</h3>
-<img src="slike/IvaJuzašić5.2.jpg"/>
-<img src="slike/IvaJuzbašić5.jpg"/>
+<img src="Slike/IvaJuzašić5.2.jpg"/>
+<img src="Slike/IvaJuzbašić5.jpg"/>
 <p>Tehnike digitalnog retuširanja fotografija za postizanje realističnog efekta
 - selekcije (Lasso Tool)
 - uklanjanje nedostataka na slici:
@@ -49,8 +49,8 @@ retuširanja, fotomontaže i koloriranja.</p>
  kopiranjem selekcije u layere
 - lokalne i globalne korekcije boja (Burn/Dodge brush, Levels, Brightness/Contrast)</p>
 <h3>KOLORIRANJE</h3>
-<img src="slike/IvaJuzbašić6.jpg"/>
-<img src="slike/Iva Juzbašić6.2.jpg"/>
+<img src="Slike/IvaJuzbašić6.jpg"/>
+<img src="Slike/Iva Juzbašić6.2.jpg"/>
 <p>Tehnike digitalnog koloriranja crno bijelih fotografija
 - selekcije – Magnetic Lasso Tool
 - selekcije – Quick Mask Mode
@@ -58,7 +58,7 @@ retuširanja, fotomontaže i koloriranja.</p>
 - Adjustment layer – metoda kolorizacije bez uništavanja boja na originalnoj slici
 - Layer mask – maksa aplicirana na layer koja skriva ili otkriva efekte na layeru</p>
 <h3>FOTOMONTAŽA</h3>
-<img src="slike/IvaJuzbasic7.jpg"/>
+<img src="Slike/IvaJuzbasic7.jpg"/>
 <p>Tehnike selektiranja različitih tipova elemenata slike
 - Polygonal Lasso za jednostavne selekcije
 - Magnetic Lasso Tool, Quick Mask Mode – selekcije elemenata sa oštrim rubovima
@@ -66,17 +66,17 @@ retuširanja, fotomontaže i koloriranja.</p>
 - korekcije boja – Color Balance, Levels
 - izrada realistične sjene </p>
 <h3>PROJEKTNI ZADATAK</h3>
-<img src="slike/Projektni zadatak2.jpg"/>
+<img src="Slike/Projektni zadatak2.jpg"/>
 <p>Kreirati sliku u Adobe Photoshopu ili GIMPu kao kompoziciju više fotografija koristeći tehnike
 retuširanja, fotomontaže i koloriranja.</p>
 <h2>VIDEO/WEB</h2>
 <h3>KINEMAGRAF</h3>
-<img src="slike/Kinemagraf (3).gif"/>
+<img src="Slike/Kinemagraf (3).gif"/>
 <p>Ova vježba se bavi osnovama obrade video materijala i uvođenjem multimedije u video projekt. Rezultat vježbe će biti kinemagraf čija je karakteristika spajanje statične i pokretne slike. 
 Definicija: Kinemagraf ili eng. cinemagraph je video isječak čija se sekvenca ponavlja u beskonačnost, najčešće u GIF formatu, a u kompoziciji spaja pokretnu i statičnu grafiku (sliku i video). Dok je većina grafike statična, samo mali dio je animiran (pokretan).</p>
 <h3>VIDEO</h3>
 <video controls>
-		<source src="slike/Vježba9.IvaJuzbašić (1).mp4" type="video/mp4" >
+		<source src="Slike/Vježba9.IvaJuzbašić (1).mp4" type="video/mp4" >
 	</video>
 <p>Rezanje i spajanje video isječaka iz više izvora
 -        video efekti
