--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 <a href="index.html">vrati me doma!</a>
 <h1>REKLAMNI PROIZVOD</h1>
 <video controls>
-		<source src="slike/MOJVIDEO.mp4" type="video/mp4" >
+		<source src="Slike/MOJVIDEO.mp4" type="video/mp4" >
 	</video>
 <p>Na početku videa može se vidjeti kinemagraf kao i tekstualni opis. Efekti korišteni za video su sljedeći:Fade in video, fade out video, Blur: Box, Saturation, Opacity, Size, pozition and rotate, Glitch, Fade out Audio, Fade in audio.  </p>
 
